--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -8,3 +8,5 @@
 @import 'partials/common/commonStyles.scss';
 @import 'partials/footer/footer.scss';
 @import 'partials/header/header.scss';
+@import 'partials/common/card.scss';
+@import 'partials/common/catalog.scss';
