--- a/src/style/partials/common/commonStyles.scss
+++ b/src/style/partials/common/commonStyles.scss
@@ -2,6 +2,10 @@
   outline: none;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   position: relative;
   display: block;
@@ -10,12 +14,87 @@ body {
   font-weight: 400;
 }
 
-.screen {
-  width: 100%;
+.wrapper {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
+  justify-content: stretch;
+  align-items: stretch;
   min-height: 100vh;
+}
+
+.main {
+  box-sizing: border-box;
+  flex-grow: 1;
+  display: flex;
+  justify-content: stretch;
+  align-items: stretch;
+  padding: 150px 0 63px;
+
+  @include mMax {
+    padding: 60px 0 43px;
+  }
 }
 
 .container {
   width: calc(100% - 80px);
   margin: 0 auto;
+
+  @include mMax {
+    width: calc(100% - 32px);
+  }
+}
+
+.button {
+  box-sizing: border-box;
+  min-height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 24px;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-decoration: none;
+  background-color: #000;
+  width: max-content;
+  transition: opacity 0.2s linear;
+
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
+.link {
+  display: block;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  text-decoration: underline;
+  color: #000000;
+  width: max-content;
+
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+.slick-arrow {
+  cursor: pointer;
+
+  path {
+    fill: #666;
+    transition: 0.2s linear;
+  }
+
+  &:hover {
+    path {
+      fill: #000;
+    }
+  }
 }
