--- a/src/style/partials/header/header.scss
+++ b/src/style/partials/header/header.scss
@@ -10,19 +10,50 @@
   align-items: center;
   box-sizing: border-box;
   border: 1px solid #dcdcdc;
+  background-color: #fff;
+
+  @include mMax {
+    height: 48px;
+    border: none;
+  }
+
+  &-burger {
+    width: 16px;
+    display: none;
+
+    img {
+      display: block;
+      width: 100%;
+    }
+
+    @include mMax {
+      display: block;
+    }
+  }
 
   .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include mMax {
+      width: calc(100% - 32px);
+      margin: 0 auto;
+    }
   }
 
   &-logo {
     display: block;
     width: 209px;
+
     img {
       display: block;
       width: 100%;
+    }
+
+    @include mMax {
+      width: 129px;
+      margin: 0 auto;
     }
   }
 
@@ -31,6 +62,10 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+
+    @include mMax {
+      display: none;
+    }
 
     li {
       margin: 0 20px;
@@ -46,6 +81,125 @@
         color: #000000;
         opacity: 0.8;
         text-decoration: none;
+        transition: opacity 0.2s linear;
+
+        &:before {
+          content: '';
+          position: absolute;
+          bottom: -4px;
+          right: 0;
+          left: 0;
+          transition: transform 0.2s linear, opacity 0.2s linear;
+          height: 2px;
+          background-color: #000;
+          opacity: 0;
+          transform: scaleX(0);
+          transform-origin: center;
+        }
+
+        &:hover {
+          opacity: 1;
+
+          &:before {
+            opacity: 1;
+            transform: scaleX(1);
+          }
+        }
+      }
+    }
+  }
+
+  &-basket {
+    display: block;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #000000;
+    opacity: 0.8;
+    transition: opacity 0.2s linear;
+
+    &:hover {
+      opacity: 1;
+    }
+
+    &-wrapper {
+      display: block;
+      width: 208px;
+      text-align: right;
+
+      @include tMax {
+        width: auto;
+      }
+    }
+
+    @include mMax {
+      font-size: 12px;
+      line-height: 14px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+
+      span {
+        &:nth-child(1) {
+          display: block;
+          margin-right: 3px;
+          font-size: 0;
+          width: 14px;
+          height: 16px;
+          background: center / auto url(../img/black_basket.svg) no-repeat;
+        }
+      }
+    }
+  }
+
+  &-menu {
+    box-sizing: border-box;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: -999;
+    width: 100vw;
+    height: 100vh;
+    background-color: #fff;
+    padding: 20px 20px 35px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transition: opacity 0.2s linear;
+
+    &.is-active {
+      opacity: 1;
+      z-index: 999;
+    }
+
+    .header-logo {
+      width: 200px;
+    }
+
+    .card-modal-close {
+      top: 25px;
+      right: 20px;
+      position: absolute;
+      width: 20px;
+      height: 20px;
+    }
+
+    .header-tabs {
+      display: block;
+      margin: auto;
+
+      a {
+        width: max-content;
+        margin: 0 auto;
+      }
+
+      li + li {
+        margin-top: 40px;
       }
     }
   }
