--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,3 +10,4 @@
 @import 'partials/header/header.scss';
 @import 'partials/common/card.scss';
 @import 'partials/common/catalog.scss';
+@import 'partials/common/pay.scss';
