--- a/src/style/partials/footer/footer.scss
+++ b/src/style/partials/footer/footer.scss
@@ -11,6 +11,12 @@
   background-color: #fff;
   border: 1px solid #dcdcdc;
 
+  @include mMax {
+    .container {
+      width: calc(100% - 30px);
+    }
+  }
+
   &-menu {
     list-style: none;
     display: flex;
