--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -11,3 +11,7 @@
 @import 'partials/common/card.scss';
 @import 'partials/common/catalog.scss';
 @import 'partials/common/pay.scss';
+@import 'partials/common/big-basket.scss';
+@import 'partials/common/polic.scss';
+@import 'partials/common/contacts.scss';
+@import 'partials/common/main_page.scss';
