--- a/src/style/partials/common/pay.scss
+++ b/src/style/partials/common/pay.scss
@@ -1,6 +1,7 @@
 .payment {
   &-wrapper {
-    margin-bottom: 24px;
+    max-width: 1300px;
+    margin: 0 auto 24px;
   }
 
   &-title {
@@ -148,6 +149,16 @@
         width: calc(50% - 50px);
       }
     }
+
+    &.resault {
+      .payment-pipline-line {
+        width: calc(100% - 106px);
+
+        @include mMax {
+          width: calc(100% - 80px);
+        }
+      }
+    }
   }
 
   &-tabs {
@@ -239,6 +250,18 @@
       text-transform: uppercase;
     }
 
+    &.w50 {
+      width: calc(50% - 8px);
+
+      @include mMax {
+        width: 100%;
+      }
+    }
+
+    &.w100 {
+      width: 100%;
+    }
+
     &.small {
       width: 146px;
 
@@ -290,6 +313,16 @@
     color: #000000;
     border: 1px solid #dcdcdc;
     border-radius: 0;
+
+    &.textarea {
+      padding: 12px;
+      height: 164px;
+      resize: none;
+
+      @include mMax {
+        height: 124px;
+      }
+    }
   }
 
   &-adr {
@@ -353,12 +386,12 @@
     &-content {
       box-sizing: border-box;
       width: 100%;
-      height: 369px;
+      max-height: 369px;
       overflow-y: auto;
       padding: 0 16px 8px;
 
       @include mMax {
-        height: 253px;
+        max-height: 253px;
       }
 
       &::-webkit-scrollbar-track {
@@ -497,6 +530,62 @@
         padding: 0;
         margin-top: 12px;
       }
+    }
+  }
+
+  &-resault {
+    box-sizing: border-box;
+    padding: 128px 20px;
+
+    @include mMax {
+      padding: 24px 16px;
+      margin-top: 20px;
+      border: 1px solid #dcdcdc;
+    }
+
+    &-check {
+      display: block;
+      width: 64px;
+      margin: 0 auto 24px;
+    }
+
+    h2 {
+      display: block;
+      font-weight: 800;
+      font-size: 16px;
+      line-height: 19px;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      color: #000000;
+      text-align: center;
+    }
+
+    &-info {
+      display: block;
+      text-align: center;
+      max-width: 450px;
+      margin: 24px auto 0;
+
+      p {
+        display: block;
+        font-weight: 800;
+        font-size: 16px;
+        line-height: 19px;
+        text-align: center;
+        letter-spacing: 0.1em;
+        color: #000000;
+      }
+    }
+
+    &-desc {
+      display: block;
+      text-decoration: none;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 19px;
+      text-align: center;
+      letter-spacing: 0.1em;
+      color: #000000;
     }
   }
 }
