--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,3 +15,4 @@
 @import 'partials/common/polic.scss';
 @import 'partials/common/contacts.scss';
 @import 'partials/common/main_page.scss';
+@import 'partials/common/leater.scss';
