--- a/src/style/partials/common/main_page.scss
+++ b/src/style/partials/common/main_page.scss
@@ -3,10 +3,10 @@
     padding: 0;
   }
 
-  &-wrappger {
+  &-wrapper {
     flex-grow: 1;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
   }
 
   &-bg {
