--- a/src/style/partials/common/commonStyles.scss
+++ b/src/style/partials/common/commonStyles.scss
@@ -46,6 +46,12 @@ body {
 }
 
 .button {
+  border-radius: 0;
+  font-family: 'Lato';
+  margin: 0;
+  padding: 0;
+  border: none;
+  outline: none;
   box-sizing: border-box;
   min-height: 40px;
   display: flex;
@@ -62,6 +68,7 @@ body {
   background-color: #000;
   width: max-content;
   transition: opacity 0.2s linear;
+  cursor: pointer;
 
   &:hover {
     opacity: 0.7;
