--- a/src/style/partials/common/pay.scss
+++ b/src/style/partials/common/pay.scss
@@ -293,6 +293,10 @@
     flex-wrap: wrap;
     transition: opacity 0.2s linear;
 
+    .button {
+      min-width: 188px;
+    }
+
     &.disabled {
       opacity: 0.5;
       pointer-events: none;
@@ -348,12 +352,18 @@
     }
 
     &-item {
+      box-sizing: border-box;
       display: block;
       font-weight: normal;
       font-size: 16px;
       line-height: 19px;
       letter-spacing: 0.1em;
       color: #000000;
+      padding-right: 20px;
+
+      &:last-child {
+        padding-right: 0;
+      }
 
       @include mMax {
         font-size: 12px;
