--- a/src/style/partials/common/main_page.scss
+++ b/src/style/partials/common/main_page.scss
@@ -18,7 +18,7 @@
   }
 
   .header {
-    background-color: transparent;
+    background: rgba(39, 39, 39, 0.8);
     border: none;
 
     .header-basket {
