--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -16,3 +16,4 @@
 @import 'partials/common/contacts.scss';
 @import 'partials/common/main_page.scss';
 @import 'partials/common/leater.scss';
+@import 'partials/common/address.scss';
