--- a/src/style/partials/common/card.scss
+++ b/src/style/partials/common/card.scss
@@ -1,8 +1,6 @@
 .card {
-  position: relative;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
+  justify-content: flex-end;
   width: calc(100% - 32px);
   margin: 0 auto;
   max-width: 1556px;
@@ -48,13 +46,14 @@
     flex-direction: column;
     align-items: center;
     max-width: 600px;
+    justify-content: flex-start;
   }
 
   .slick-arrow {
     position: absolute;
     top: 50%;
-    z-index: 2;
     margin-top: -20px;
+    z-index: 1000;
 
     @include tMax {
       top: 200px;
@@ -66,57 +65,86 @@
     }
 
     &:first-child {
-      left: 0;
+      left: 78px;
+      @include tMax {
+        left: 16px;
+      }
     }
 
     &:last-child {
-      right: 0;
+      right: 50%;
+      transform: translateX(800px);
+
+      @media screen and (max-width: 1800px){
+        right: 78px;
+        transform: none;
+      }
+      @include tMax {
+        right: 16px;
+        transform: none;
+      }
     }
   }
 
   &-wrapper {
     box-sizing: border-box;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-end;
     width: 100%;
     max-height: 100%;
     overflow: hidden;
+    position: relative;
   }
 
   &-slider {
-    width: 50%;
-    max-width: 583px;
-    height: 74vh;
+    width: 100%;
+    height: 100%;
     flex-grow: 1;
     margin-right: 40px;
-    margin-top: 37px;
+    padding-top: 37px;
+    box-sizing: border-box;
+
+    position: absolute;
+    left: 0;
+    top: 0;
 
     @include tMax {
       margin: 0;
       margin-bottom: 20px;
-      height: 400px;
-      max-width: 300px;
+      max-height: 400px;
+      position: relative;
+      flex-grow: 1;
     }
 
     @include mMax {
       width: 100%;
     }
 
+    .slick-list{
+      padding:0 31.5% 0 0;
+      height: 100%;
+      @include tMax {
+        padding:0;
+      }
+    }
+    .slick-track{
+      height: 100%;
+    }
+
     &-item {
-      height: 74vh;
+      height: 100%;
       width: 100%;
 
       @include tMax {
-        height: 400px;
+        max-height: 400px;
       }
 
       img {
         display: block;
         width: 100%;
         height: 100%;
-        object-fit: cover;
-        object-position: top;
+        object-fit: contain;
+        object-position: center center;
         margin: 0 auto;
       }
     }
@@ -131,6 +159,8 @@
     letter-spacing: 0.1em;
     text-transform: uppercase;
     color: #000000;
+    position: relative;
+    z-index: 999;
 
     @include tMax {
       text-align: center;
@@ -239,8 +269,8 @@
           display: flex;
           justify-content: center;
           align-items: center;
-          width: 32px;
           height: 32px;
+          box-sizing: border-box;
 
           input {
             display: none;
@@ -251,7 +281,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 32px;
+            min-width: 32px;
+            padding: 0 2.35px;
             height: 32px;
             font-size: 16px;
             line-height: 19px;
@@ -301,7 +332,7 @@
 
     &.is-active {
       visibility: visible;
-      z-index: 999;
+      z-index: 1500;
       opacity: 1;
     }
 
