--- a/src/style/partials/common/card.scss
+++ b/src/style/partials/common/card.scss
@@ -75,7 +75,7 @@
       right: 50%;
       transform: translateX(800px);
 
-      @media screen and (max-width: 1800px){
+      @media screen and (max-width: 1800px) {
         right: 78px;
         transform: none;
       }
@@ -91,22 +91,24 @@
     display: flex;
     justify-content: flex-end;
     width: 100%;
-    max-height: 100%;
+    min-height: 606px;
+    max-height: calc(100vh - 129px);
     overflow: hidden;
     position: relative;
+
+    @include tMax {
+      max-height: none;
+      min-height: 1px;
+    }
   }
 
   &-slider {
-    width: 100%;
+    width: calc(100% - 633px);
+    max-width: 729px;
     height: 100%;
     flex-grow: 1;
-    margin-right: 40px;
-    padding-top: 37px;
+    margin-right: 46px;
     box-sizing: border-box;
-
-    position: absolute;
-    left: 0;
-    top: 0;
 
     @include tMax {
       margin: 0;
@@ -114,20 +116,20 @@
       max-height: 400px;
       position: relative;
       flex-grow: 1;
+      width: 100%;
     }
 
     @include mMax {
       width: 100%;
     }
 
-    .slick-list{
-      padding:0 31.5% 0 0;
+    .slick-list {
       height: 100%;
       @include tMax {
-        padding:0;
+        padding: 0;
       }
     }
-    .slick-track{
+    .slick-track {
       height: 100%;
     }
 
@@ -143,8 +145,8 @@
         display: block;
         width: 100%;
         height: 100%;
-        object-fit: contain;
-        object-position: center center;
+        object-fit: cover;
+        object-position: top center;
         margin: 0 auto;
       }
     }
@@ -161,6 +163,9 @@
     color: #000000;
     position: relative;
     z-index: 999;
+    padding-top: 64px;
+    background-color: #fff;
+    margin-right: 10px;
 
     @include tMax {
       text-align: center;
@@ -424,7 +429,7 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
-          object-position: center;
+          object-position: top center;
         }
       }
 
@@ -488,7 +493,7 @@
 
   &-slider-sub {
     position: absolute;
-    left: 78vw;
+    left: 84vw;
     pointer-events: none;
 
     @include tMax {
@@ -586,5 +591,11 @@
       text-transform: uppercase;
       color: #000;
     }
+  }
+}
+
+.card-page {
+  .main {
+    padding: 86px 0 43px;
   }
 }
