--- a/src/style/partials/common/card.scss
+++ b/src/style/partials/common/card.scss
@@ -178,11 +178,14 @@
     z-index: 999;
     padding-top: 64px;
     margin-right: 10px;
+    padding-right: 15%;
+    box-sizing: border-box;
 
     @include tMax {
       text-align: center;
       padding-bottom: 40px;
       width: 100%;
+      padding-right: 0;
 
       a {
         margin: 0 auto;
