--- a/src/style/partials/common/commonStyles.scss
+++ b/src/style/partials/common/commonStyles.scss
@@ -21,6 +21,9 @@ body {
   justify-content: stretch;
   align-items: stretch;
   min-height: 100vh;
+
+  padding: constant(safe-area-inset-top) constant(safe-area-inset-right)
+    constant(safe-area-inset-bottom) constant(safe-area-inset-left);
 }
 
 .main {
