--- a/src/style/partials/common/commonStyles.scss
+++ b/src/style/partials/common/commonStyles.scss
@@ -22,6 +22,7 @@ body {
   justify-content: stretch;
   align-items: stretch;
   min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 .main {
