--- a/src/style/partials/common/commonStyles.scss
+++ b/src/style/partials/common/commonStyles.scss
@@ -23,6 +23,8 @@ body {
   flex-direction: column;
   justify-content: stretch;
   align-items: stretch;
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
 }
 
 .main {
