--- a/src/style/partials/header/header.scss
+++ b/src/style/partials/header/header.scss
@@ -172,6 +172,7 @@
     align-items: center;
     opacity: 0;
     transition: opacity 0.2s linear;
+    height: -webkit-fill-available;
 
     &.is-active {
       opacity: 1;
@@ -231,6 +232,7 @@
     height: 100vh;
     opacity: 0;
     transition: opacity 0.2s linear;
+    height: -webkit-fill-available;
 
     &.is-active {
       opacity: 1;
