--- a/src/style/partials/common/main_page.scss
+++ b/src/style/partials/common/main_page.scss
@@ -14,6 +14,7 @@
     display: block;
     width: 100%;
     height: 100%;
+    min-height: fill-available;
     object-position: center;
     object-fit: cover;
   }
