--- a/src/style/partials/common/commonStyles.scss
+++ b/src/style/partials/common/commonStyles.scss
@@ -22,6 +22,10 @@ body {
   font-weight: 400;
   min-height: 100vh;
   min-height: fill-available;
+  @include mMax {
+    height: fill-available;
+    overflow: hidden;
+  }
 }
 
 .wrapper {
@@ -33,6 +37,14 @@ body {
   align-items: stretch;
   min-height: 100vh;
   min-height: fill-available;
+
+  @include mMax {
+    position: relative;
+    overflow-y: auto;
+    max-height: 100%;
+    height: 100%;
+    min-height: 100%;
+  }
 }
 
 .main {
@@ -46,7 +58,7 @@ body {
   padding: 150px 0 63px;
 
   @include mMax {
-    padding: 60px 0 43px;
+    padding: 60px 0 0;
   }
 }
 
