--- a/src/style/partials/common/main_page.scss
+++ b/src/style/partials/common/main_page.scss
@@ -7,16 +7,22 @@
     flex-grow: 1;
     height: 100vh;
     width: 100vw;
-    height: fill-available;
+    @include mMax {
+      height: fill-available;
+    }
   }
 
   &-bg {
     display: block;
     width: 100%;
     height: 100%;
-    min-height: fill-available;
+
     object-position: center;
     object-fit: cover;
+
+    @include mMax {
+      min-height: fill-available;
+    }
   }
 
   .header {
