--- a/src/style/partials/header/header.scss
+++ b/src/style/partials/header/header.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   align-items: center;
   box-sizing: border-box;
-  border: 1px solid #dcdcdc;
+  border-bottom: 1px solid #dcdcdc;
   background-color: #fff;
 
   @include mMax {
