--- a/src/style/partials/common/catalog.scss
+++ b/src/style/partials/common/catalog.scss
@@ -7,7 +7,7 @@
   margin: 0 auto;
   width: calc(100% - 80px);
   flex-wrap: wrap;
-  padding: 56px 20px 0;
+  padding: 56px 20px 20px;
 
   .catalog-filters-heading {
     display: none;
