--- a/src/style/partials/header/header.scss
+++ b/src/style/partials/header/header.scss
@@ -233,7 +233,7 @@
     height: 100vh;
     opacity: 0;
     transition: opacity 0.2s linear;
-    height: fill-available;
+    height: 100%;
 
     &.is-active {
       opacity: 1;
@@ -309,20 +309,20 @@
     margin-bottom: 16px;
 
     &--wrapper {
-      max-height: 276px;
+      max-height: 295px;
       overflow-y: auto;
       padding-right: 10px;
       margin-bottom: 10px;
 
       &::-webkit-scrollbar-thumb {
-        border-radius: 3px;
+        border-radius: 0px;
         background-color: #000;
       }
 
       &::-webkit-scrollbar {
-        width: 6px;
-        border-radius: 3px;
-        background-color: gray;
+        width: 4px;
+        border-radius: 0px;
+        background-color: #fff;
       }
     }
 
