--- a/src/style/partials/common/commonStyles.scss
+++ b/src/style/partials/common/commonStyles.scss
@@ -31,7 +31,11 @@ body {
     overflow: hidden;
 
     @media (orientation: landscape) {
-      height: 80vh;
+      min-height: 1px;
+      height: 100vh;
+      height: -webkit-fill-available;
+      height: fill-available;
+      overflow: hidden;
     }
   }
 }
@@ -47,6 +51,14 @@ body {
   height: fill-available;
 
   @include mMax {
+    position: relative;
+    overflow-y: auto;
+    max-height: 100%;
+    height: 100%;
+    min-height: 100%;
+  }
+
+  @media (orientation: landscape) {
     position: relative;
     overflow-y: auto;
     max-height: 100%;
