--- a/src/style/partials/common/commonStyles.scss
+++ b/src/style/partials/common/commonStyles.scss
@@ -30,7 +30,7 @@ body {
     height: fill-available;
     overflow: hidden;
 
-    @media (orientation: landscape) {
+    @media screen and (orientation: landscape) and (max-width: 813px) {
       min-height: 1px;
       height: 100vh;
       height: -webkit-fill-available;
@@ -58,7 +58,7 @@ body {
     min-height: 100%;
   }
 
-  @media (orientation: landscape) {
+  @media screen and (orientation: landscape) and (max-width: 813px) {
     position: relative;
     overflow-y: auto;
     max-height: 100%;
@@ -151,4 +151,9 @@ body {
       fill: #000;
     }
   }
+}
+
+.button[disabled] {
+  opacity: 0.5;
+  pointer-events: none;
 }
