--- a/src/style/partials/common/polic.scss
+++ b/src/style/partials/common/polic.scss
@@ -100,3 +100,30 @@
     }
   }
 }
+
+.text_page-content h1 {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 29px;
+  text-transform: uppercase;
+  margin-bottom: 24px;
+  font-weight: 700;
+}
+
+.text_page-content h3 {
+  font-size: 16px;
+  line-height: 19px;
+  margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+  .text_page-content h1 {
+    font-size: 12px;
+    line-height: 14px;
+  }
+
+  .text_page-content h3 {
+    font-size: 12px;
+    line-height: 14px;
+  }
+}
