--- a/src/style/partials/common/card.scss
+++ b/src/style/partials/common/card.scss
@@ -14,6 +14,7 @@
   &-description {
     opacity: 0;
     transition: opacity 0.2s linear;
+    padding-bottom: 12px;
 
     @include mMax {
       opacity: 1;
@@ -212,6 +213,10 @@
       @include mMax {
         font-size: 9px !important;
         line-height: 11px !important;
+      }
+
+      &::last-child {
+        margin-bottom: 0 !important;
       }
     }
 
